--- a/assets/index.html
+++ b/assets/index.html
@@ -98,10 +98,8 @@
 
     <script>
         if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
-                    .then((registration) => console.info('Service worker registered: ', registration))
-                    .catch((registrationError) => console.error('Service worker registration failed: ', registrationError));
+            navigator.serviceWorker.getRegistrations().then((registrations) => {
+                registrations.forEach((registration) => registration.unregister());
             });
         }
     </script>
